<resources>
    <string name="app_name">People</string>
    <string name="add_person_text">Add a person</string>
    <string name="btn_add">Add</string>
    <string name="delete_button">X</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="edit_person">Edit person</string>
    <string name="first_name_sort_text">Sort by first name</string>
    <string name="last_name_sort_text">Sort by last name</string>
    <string name="incorrect_form">Please fill out the form first!</string>
</resources>
